<resources>
    <string name="app_name">Quiz_App</string>
    <string name="btn1">Click Me !!</string>
    <string name="logo">logo</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="place_holder">John Doe…</string>
    <string name="startBtn">Start</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="share">Share your score</string>
    <string name="back">back</string>
</resources>
