<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"

    tools:context=".HomeActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="75dp"
        app:cardElevation="50dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:fontFamily="sans-serif"
        android:text="@string/enter_your_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTxt"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle"
        android:hint="@string/place_holder"
        android:inputType="text"
        android:padding="16dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/yellow"
        android:gravity="center"
        android:text="@string/startBtn"
        android:textColor="@color/black"
        android:textColorLink="#FFC107"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="20dp" />

</LinearLayout>
