<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:id = "@+id/result"
    tools:context=".ResultActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backBtn"
        android:layout_gravity="start"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/back_arrow"
        android:contentDescription="@string/back" />

    <TextView
        android:id="@+id/scoreboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:fontFamily="sans-serif"
        android:text="@string/scoreboard"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text=""
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/dark_teal"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text=""
        android:textColor="@color/soft_gray"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/upper_round"
        android:layout_marginTop= "40dp"
        android:layout_marginBottom="4dp"
        >

        <Button
            android:id="@+id/shareBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/dark_teal"
            android:text="@string/share"
            android:textColor="@color/white"
            app:cornerRadius="20dp" />
    </androidx.cardview.widget.CardView>
</LinearLayout>